fix: rename style class from 'collap' to 'collapse'

--- a/src/components/Asset/Settings/Presets.module.css
+++ b/src/components/Asset/Settings/Presets.module.css
@@ -23,7 +23,7 @@
   flex-direction: column;
 }
 
-.collap {
+.collapse {
   margin-bottom: 1rem;
   padding: 1rem;
   background-color: #e9ecef;
